--- a/index.html
+++ b/index.html
@@ -5,10 +5,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Computational Thinking II</title>
+    <style>
+        embed {
+            width: 100%;
+        }
+    </style>
 </head>
 
 <body>
-<h1>AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA</h1>
+    <h1>Computational Thinking</h1>
+    <h2>Logical Thinking</h2>
+    <p>literally just programming</p>
+    <!-- srsly wtf is this chapter -->
+    <img src="./structured.png">
+    <h2>Parallel Processing</h2>
+    <embed src="https://cms-compsci.deno.dev/hester/scheduling.html">
+    <!-- this is wayyyy to big, might need some edits -->
+
 </body>
 
 </html>
