--- a/index.html
+++ b/index.html
@@ -6,22 +6,105 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Computational Thinking II</title>
     <style>
-        embed {
-            width: 100%;
+        p,
+        img {
+            margin: 1ch;
+        }
+
+        body {
+            margin: 0;
+            text-align: center;
+        }
+
+        h1 {
+            text-align: center;
+            text-decoration: underline;
+            font-size: 2rem;
+            font-weight: 600;
+            padding: 1rem 1ch;
+            margin-bottom: 1rem;
+            margin: 0;
+            background: #445;
+            color: white
+        }
+
+        h2 {
+            font-size: 1.75rem;
+            color: rgb(43, 76, 56);
+            background-color: rgb(205, 230, 198);
+            margin: 1rem auto;
+            width: fit-content;
+            padding: 1rem 5ch;
+        }
+
+        h3 {
+            background-color: rgb(219, 179, 255);
+            color: rgb(0, 21, 255);
+            font-size: 1.5rem;
+            margin: auto;
+        }
+
+        ul {
+            display: inline-block;
+            text-align: left;
+        }
+
+        li {
+            margin: 0.5rem 0;
         }
     </style>
 </head>
 
+<!-- 
+    <todo>
+
+        Research (all)
+
+        Make a favicon (little icon in the tab, next to the title)
+
+        Use an ordered list
+
+        Use an unordered list
+
+        Use a hyperlink
+
+        Benefits/drawbacks of concurrent processing
+
+        The actually good bit on problem solving
+
+    </todo>
+ -->
+
 <body>
     <h1>Computational Thinking</h1>
     <h2>Logical Thinking</h2>
-    <p>literally just programming</p>
     <!-- srsly wtf is this chapter -->
+    <h3>The structured approach</h3>
+    <p>literally just programming</p>
+    <p>basically do it properly</p>
     <img src="./structured.png">
-    <h2>Parallel Processing</h2>
-    <embed src="https://cms-compsci.deno.dev/hester/scheduling.html">
-    <!-- this is wayyyy to big, might need some edits -->
-
+    <h3>Program Design</h3>
+    <p>Use flow charts or pseudocode to lay out the algorithm</p>
+    <img src="./flowchart.jpg">
+    <p>Test it with a trace table</p>
+    <p>(or just use an IDE that tells you what went wrong)</p>
+    <h2>Concurrent Processing</h2>
+    <iframe width="560" height="315"
+        src="https://www.youtube.com/embed/tVg25_60sNo?si=gFXimSIMLT2J8c5T&autoplay=1&mute=1&loop=1&controls=0&playlist=tVg25_60sNo"
+        title="YouTube video player" frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <div>
+        <ul>
+            <li>Concurrent processing is where multiple tasks are worked on at the same time, where the processor
+                alternates
+                between them.</li>
+            <li>Parallel processing is where multiple instructions are executed simultaneously on different cores of the
+                processor.</li>
+        </ul>
+    </div>
+    <h2>Problems</h2>
+    <img src="barraconstruction.gif">
 </body>
 
 </html>
