--- a/index.html
+++ b/index.html
@@ -52,6 +52,14 @@
         li {
             margin: 0.5rem 0;
         }
+
+        #cipher {
+            text-align: left;
+        }
+
+        #cipher img {
+            position: absolute;
+        }
     </style>
 </head>
 
@@ -64,19 +72,23 @@
 
         Use an ordered list
 
-        Use an unordered list
-
         Use a hyperlink
 
         Benefits/drawbacks of concurrent processing
 
         The actually good bit on problem solving
 
+        Style the footer
+
     </todo>
  -->
 
 <body>
     <h1>Computational Thinking</h1>
+    <div id="cipher">
+        <img src="./caesar-inner.png" draggable="false">
+        <img id="outer" src="./caesar-outer.png" draggable="false">
+    </div>
     <h2>Logical Thinking</h2>
     <!-- srsly wtf is this chapter -->
     <h3>The structured approach</h3>
@@ -89,11 +101,11 @@
     <p>Test it with a trace table</p>
     <p>(or just use an IDE that tells you what went wrong)</p>
     <h2>Concurrent Processing</h2>
-    <iframe width="560" height="315"
+    <!--<iframe width="560" height="315"
         src="https://www.youtube.com/embed/tVg25_60sNo?si=gFXimSIMLT2J8c5T&autoplay=1&mute=1&loop=1&controls=0&playlist=tVg25_60sNo"
         title="YouTube video player" frameborder="0"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>-->
     <div>
         <ul>
             <li>Concurrent processing is where multiple tasks are worked on at the same time, where the processor
@@ -105,6 +117,49 @@
     </div>
     <h2>Problems</h2>
     <img src="barraconstruction.gif">
+    <footer>
+        <p>Collaborators:</p>
+        <ul>
+            <li>Hester</li>
+            <li>Lucy</li>
+            <li>Louise</li>
+            <li>Rebecca</li>
+        </ul>
+    </footer>
 </body>
+<script>
+    const disableCipher = true
+
+    let shift = disableCipher ? 0 : Math.floor(Math.random() * 26)
+    const content = []
+    document.querySelectorAll("h1,h2,h3,p").forEach((p, i) => { content[i] = encrypt(p.innerText); p.innerText = content[i] })
+    const cipher = document.getElementById("cipher")
+    const disk = document.getElementById("outer")
+    const rev = 2 * Math.PI
+    let initAngle = 0
+    let diskAngle = 0
+    function getMouseAngle(e) { return Math.atan2(e.clientY - 160, e.clientX - 160) }
+    function getDiskAngle(e) { return normalise(getMouseAngle(e) - initAngle + diskAngle) }
+    function normalise(angle) { return (angle + rev) % rev }
+    function rotate(e) { disk.style.transform = `rotate(${getDiskAngle(e)}rad)` }
+    function encrypt(v) {
+        return v.split("").map(v => {
+            const c = v.charCodeAt(0);
+            if (c >= 65 && c <= 90) return String.fromCharCode(((c - 65 + shift) % 26) + 65)
+            if (c >= 97 && c <= 122) return String.fromCharCode(((c - 97 + shift) % 26) + 97)
+            return v
+        }).join("")
+    }
+    cipher.addEventListener("mousedown", e => {
+        initAngle = normalise(getMouseAngle(e))
+        cipher.addEventListener("mousemove", rotate)
+    })
+    cipher.addEventListener("mouseup", e => {
+        cipher.removeEventListener("mousemove", rotate)
+        diskAngle = getDiskAngle(e)
+        shift = Math.round((1 - diskAngle / rev) % 1 * 26)
+        document.querySelectorAll("h1,h2,h3,p").forEach((p, i) => { p.innerText = encrypt(content[i]) })
+    })
+</script>
 
 </html>
