Squashed commit of the following:
commit 726df19933d22c21ac27f8db299e7b82e183c898
Merge: 915c691 0536bd2
Author: Hester <144342125+Hester-Clapp@users.noreply.github.com>
Date:   Mon Mar 25 18:55:50 2024 +0000

    Merge pull request #6 from Hester-Clapp/Hester

    hid cipher

commit 0536bd2e236b248779acc6e5e5af9495f8b3389f
Author: Hester Clapp <18hclapp@cms.tela.org.uk>
Date:   Mon Mar 25 18:54:51 2024 +0000

    hid cipher

commit 915c6911fdd4f5fff2bb4d419d7b1f1de146fa72
Merge: d8a038d 4744fc6
Author: Hester <144342125+Hester-Clapp@users.noreply.github.com>
Date:   Mon Mar 25 18:42:50 2024 +0000

    Merge pull request #5 from Hester-Clapp/Hester

    finished most of it except the TSP

commit 4744fc6b327cf17ae168153075dde49a93cdd239
Author: Hester Clapp <18hclapp@cms.tela.org.uk>
Date:   Mon Mar 25 18:42:09 2024 +0000

    finished most of it except the TSP

commit d8a038d0c33daaeafa158f4db2f2acb7b14f6414
Merge: a202ba3 f61bc6d
Author: Hester <144342125+Hester-Clapp@users.noreply.github.com>
Date:   Thu Mar 21 22:28:28 2024 +0000

    Merge pull request #4 from Hester-Clapp/Hester

    cipher

commit f61bc6df69a0a844b1439d58b4c8a5320959a0c7
Author: Hester Clapp <18hclapp@cms.tela.org.uk>
Date:   Thu Mar 21 22:27:25 2024 +0000

    cipher

commit a202ba30af85ca1fc137ec3b3453890e8dbaead4
Merge: 321e6c7 d9e193b
Author: Hester <144342125+Hester-Clapp@users.noreply.github.com>
Date:   Thu Mar 21 20:20:59 2024 +0000

    Merge pull request #3 from Hester-Clapp/Hester

    Skeleton for "Thinking Logically"

commit d9e193bf030065e97759e7927a7f8f9be7884556
Author: Hester Clapp <18hclapp@cms.tela.org.uk>
Date:   Thu Mar 21 20:18:41 2024 +0000

    Skeleton for "Thinking Logically"

commit 321e6c7884f15a44afd779bd2c7e6bdf0c552e3f
Merge: 4e5f34a ae0c6fd
Author: Hester <144342125+Hester-Clapp@users.noreply.github.com>
Date:   Thu Mar 21 11:29:56 2024 +0000

    Merge pull request #2 from Hester-Clapp/Hester

    some headings

commit ae0c6fdd7b3706a8859056b28420c7491893b570
A

--- a/index.html
+++ b/index.html
@@ -5,10 +5,294 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Computational Thinking II</title>
+    <style>
+        #cipher {
+            text-align: left;
+        }
+
+        #cipher img {
+            position: absolute;
+        }
+
+        p {
+            margin: 1ch 1rem;
+        }
+
+        img {
+            margin: 1ch 1rem;
+            width: 40ch;
+            height: auto;
+        }
+
+        img.exact {
+            width: fit-content;
+            height: fit-content;
+        }
+
+        img.inline {
+            display: inline;
+            height: 1.5rem;
+            width: auto;
+            vertical-align: middle;
+            padding: 0 1ch;
+            margin: 0;
+        }
+
+        body {
+            margin: 0;
+            text-align: center;
+        }
+
+        h1 {
+            text-align: center;
+            text-decoration: underline;
+            font-size: 2rem;
+            font-weight: 600;
+            padding: 1rem 1ch;
+            margin-bottom: 1rem;
+            margin: 0;
+            background: #445;
+            color: white
+        }
+
+        h2 {
+            font-size: 1.75rem;
+            color: rgb(43, 76, 56);
+            background-color: rgb(205, 230, 198);
+            margin: 1rem auto;
+            margin-top: 4rem;
+            margin-bottom: 2rem;
+            width: fit-content;
+            padding: 1rem 5ch;
+        }
+
+        h3 {
+            background-color: rgb(219, 179, 255);
+            color: rgb(0, 21, 255);
+            font-size: 1.5rem;
+            margin: auto;
+        }
+
+        ol,
+        ul {
+            display: inline-block;
+            text-align: left;
+        }
+
+        li {
+            margin: 0.5rem 0;
+        }
+
+        #cipherButton {
+            position: absolute;
+            top: 0;
+            left: 0;
+            font-size: 2rem;
+            padding: 1rem 1ch;
+            margin: 0;
+            border: 0;
+            background-color: #445;
+            color: #445;
+        }
+
+        #cipherButton:hover {
+            background-color: #667;
+            color: white;
+        }
+
+        #cipher {
+            display: none;
+        }
+
+        footer {
+            background-color: #445;
+            padding: 1rem 1ch;
+            color: white;
+        }
+
+        footer ul {
+            display: flex;
+            gap: 2ch;
+            align-self: center;
+            width: 100%;
+            align-items: center;
+            justify-content: center;
+            margin: 0;
+            padding: 0;
+        }
+
+        footer ul a {
+            color: white;
+            padding: 1rem 4ch;
+            background-color: #445;
+        }
+
+        footer ul a:hover {
+            background-color: #667;
+        }
+    </style>
 </head>
 
+<!-- 
+    <todo>
+
+        Research (all)
+
+        Make a favicon (little icon in the tab, next to the title)
+
+        Benefits/drawbacks of concurrent processing
+
+        Explain pipelining
+
+        Introduce the travelling salesman problem (maybe use the giraffes as an example?)
+
+        Explain time complexity
+
+        Demonstrate heuristics
+
+    </todo>
+ -->
+
 <body>
-<h1>AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA</h1>
+    <h1>Computational Thinking</h1>
+    <button id="cipherButton">Decipher</button>
+    <div id="cipher">
+        <img src="./caesar-inner.png" draggable="false">
+        <img id="outer" src="./caesar-outer.png" draggable="false">
+    </div>
+    <h2>Logical Thinking</h2>
+    <!-- srsly wtf is this chapter -->
+    <h3>The structured approach</h3>
+    <p>literally just programming</p>
+    <p>basically do it properly</p>
+    <img src="./structured.png">
+    <h3>Program Design</h3>
+    <p>Use flow charts or pseudocode to lay out the algorithm</p>
+    <img src="./flowchart.jpg">
+    <p>Test it with a trace table</p>
+    <p>(or just use an IDE that tells you what went wrong)</p>
+    <h2>Concurrent Processing</h2>
+    <iframe width="560" height="315"
+        src="https://www.youtube.com/embed/tVg25_60sNo?si=gFXimSIMLT2J8c5T&autoplay=1&mute=1&loop=1&controls=0&playlist=tVg25_60sNo"
+        title="YouTube video player" frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <div>
+        <ul>
+            <li>Concurrent processing is where multiple tasks are worked on at the same time, where the processor
+                alternates
+                between them.</li>
+            <li>Parallel processing is where multiple instructions are executed simultaneously on different cores of the
+                processor.</li>
+        </ul>
+    </div>
+    <p>Sequential: </p><img src="sequential.png" class="exact">
+    <p>Concurrent: </p><img src="concurrent.png" class="exact">
+    <p>Parallel: </p><img src="parallel.png" class="exact">
+    <h3>Concurrent Processing</h3>
+    <p>reduces downtime, but takes longer to finish tasks</p>
+    <h3>Parallel Processing</h3>
+    <p>executes tasks faster, but requires more expensive hardware</p>
+    <!-- These explanations could be improved -->
+    <h2>Problems</h2>
+    <p>A problem is computable if:</p>
+    <div>
+        <ol>
+            <li>It can be solved by an algorithm</li>
+            <li>In a finite amount of time</li>
+            <li>For any case</li>
+        </ol>
+    </div>
+    <h3>Simulation</h3>
+    <p>If you want to do something, but you don't want to actually do it, you can create a model and simulate
+        doing it. This saves time and money
+    </p>
+    <h3>Divide and Conquer</h3>
+    <p>A method of solving problems by making them smaller and simpler, until they are trivial, then combining
+        them back
+        up to the original. Examples of algorithms that use this include binary search and quicksort.</p>
+    <img src="infinite-dragon-dream-feet-loop.gif">
+    <h3>Backtracking</h3>
+    <p>This involves making decisions and keeping track of them until you reach a dead end, then retracing your steps
+        with the knowledge that the choice you made doesn't work. Used in algorithms such as depth-first search and
+        recursive backtracking maze generators.</p>
+    <h3>Abstraction</h3>
+    <p>If you have a problem, try using graph theory. The problem may be isomorphic to something very simple</p>
+    <h3>Automation</h3>
+    <p>(is this just the same as abstract modelling?)</p>
+    <h2>Problem Solving</h2>
+    <h3>Visualisation</h3>
+    <p>Many problems can easily be visualised with a graph or a tree. This makes it easy to spot obvious solutions,
+        avoiding unnecessary work with a simple diagram. (Miss McEwan would agree)</p>
+    <h3>Data Mining</h3>
+    <p><i>“Big data is big. Really big. You just won't believe how vastly, hugely, mind-bogglingly big it is. I mean,
+            you may think it's a long way down the road to the chemist's, but that's just peanuts to big data!”</i></p>
+    <p>Data mining is about searching for patterns and correlations in datasets that are so large, conventional methods
+        cannot be used.</p>
+    <h3>Pipelining</h3>
+    <!-- I don't know how to explain this well -->
+    <h2>Travelling Salesman Problem</h2>
+    <!-- finish the rest of chapter 52 here -->
+    <img src="barraconstruction.gif" class="exact">
+    <footer>
+        <p>Contributors:</p>
+        <ul>
+            <a href="https://cms-compsci.deno.dev/hester">Hester</a>
+            <!-- <a href="https://cms-compsci.deno.dev/lucy">Lucy</a> -->
+            <!-- <a href="https://cms-compsci.deno.dev/louise">Louise</a> -->
+            <!-- <a href="https://cms-compsci.deno.dev/rebecca">Rebecca</a> -->
+        </ul>
+    </footer>
 </body>
+<script>
+    const disableCipher = true
+
+    let shift = disableCipher ? 0 : Math.floor(Math.random() * 26)
+    const content = []
+    document.querySelectorAll("h1,h2,h3,p,li").forEach((p, i) => { content[i] = encrypt(p.innerHTML); p.innerHTML = content[i] })
+    const button = document.getElementById("cipherButton")
+    const cipher = document.getElementById("cipher")
+    const disk = document.getElementById("outer")
+    const rev = 2 * Math.PI
+    let initAngle = 0
+    let diskAngle = 0
+    let isOpen = false
+    function getMouseAngle(e) { return Math.atan2(e.clientY - 160, e.clientX - 160) }
+    function getDiskAngle(e) { return normalise(getMouseAngle(e) - initAngle + diskAngle) }
+    function normalise(angle) { return (angle + rev) % rev }
+    function rotate(e) { disk.style.transform = `rotate(${getDiskAngle(e)}rad)` }
+    function encrypt(v) {
+        return v.split("").map(v => {
+            const c = v.charCodeAt(0);
+            if (c >= 65 && c <= 90) return String.fromCharCode(((c - 65 + shift) % 26) + 65)
+            if (c >= 97 && c <= 122) return String.fromCharCode(((c - 97 + shift) % 26) + 97)
+            return v
+        }).join("")
+    }
+    function mouseDown(e) {
+        initAngle = normalise(getMouseAngle(e))
+        cipher.addEventListener("mousemove", rotate)
+    }
+    function mouseUp(e) {
+        cipher.removeEventListener("mousemove", rotate)
+        diskAngle = getDiskAngle(e)
+        shift = Math.round((1 - diskAngle / rev) % 1 * 26)
+        document.querySelectorAll("h1,h2,h3,p,li").forEach((p, i) => { p.innerText = encrypt(content[i]) })
+    }
+    button.addEventListener("click", () => {
+        if (isOpen) {
+            isOpen = false
+            cipher.removeEventListener("mousedown", mouseDown)
+            cipher.removeEventListener("mouseup", mouseUp)
+            cipher.style.display = "none"
+        } else {
+            isOpen = true
+            cipher.addEventListener("mousedown", mouseDown)
+            cipher.addEventListener("mouseup", mouseUp)
+            cipher.style.display = "block"
+        }
+    })
+    setTimeout(() => { button.style.color = "white" }, 2000)
+</script>
 
 </html>
