--- a/index.html
+++ b/index.html
@@ -230,16 +230,18 @@
     <p>Data mining is about searching for patterns and correlations in datasets that are so large, conventional methods
         cannot be used.</p>
     <h3>Pipelining</h3>
-    <!-- I don't know how to explain this well -->
+    <p>Pipelining is basically where you break up a task into lots of little ones then overlap their processing. For example, when one is being processed one way, another is being processed in another, etc.</p>
     <h2>Travelling Salesman Problem</h2>
-    <!-- finish the rest of chapter 52 here -->
+    <p>Says that given a list of places and the distances between them, find the shortest route that the salesman can go to visit each town once and get back to where he started. Its said to be intractable because it will take a long time with a very fast computer to find an optimal solution to a problem with a small amount of cities. It becomes impossible as the cities increase. 😔
+    </p>
+    <h3>Comparing time complexities</h3>
     <img src="barraconstruction.gif" class="exact">
     <footer>
         <p>Contributors:</p>
         <ul>
             <a href="https://cms-compsci.deno.dev/hester">Hester</a>
             <!-- <a href="https://cms-compsci.deno.dev/lucy">Lucy</a> -->
-            <!-- <a href="https://cms-compsci.deno.dev/louise">Louise</a> -->
+            <a href="https://cms-compsci.deno.dev/louise">Louise</a>
             <!-- <a href="https://cms-compsci.deno.dev/rebecca">Rebecca</a> -->
         </ul>
     </footer>
