--- a/index.html
+++ b/index.html
@@ -266,9 +266,7 @@
     </table>
     <img src="time-complexity.png">
     <h3>Heuristics</h3>
-    <p></p>
-    <!-- Someone write this, maybe Lucy? -->
-    <img src="barraconstruction.gif" class="exact">
+    <p>Problems can be solved enough by: getting a solution with a high probability of being correct, solving a simpler version or by applying a methodology not guaranteed to be optimal but is sufficient. The latter being the heuristic approach. The aim is to find a good solution within a reasonable time frame. Some heuristic solutions have already been comprised for the travelling salesman problem.</p>
     <footer>
         <p>Contributors:</p>
         <ul>
@@ -279,7 +277,7 @@
     </footer>
 </body>
 <script>
-    const disableCipher = true
+    const disableCipher = false
 
     let shift = disableCipher ? 0 : Math.floor(Math.random() * 26)
     const content = []
